kube/decidim-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: decidim-sen-deployment
spec:
  selector:
    matchLabels:
      app: decidim-sen-app
  template:
    metadata:
      labels:
        app: decidim-sen-app
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - decidim-sen-app
                topologyKey: topology.kubernetes.io/zone
      containers:
      - name: decidim-sen-app
        image: rg.fr-par.scw.cloud/decidim-sen/decidim-sen:latest
        startupProbe:
          httpGet:
            path: /health_check
            port: 3000
            httpHeaders:
            - name: "X-http-safelist"
              value: "true"
          initialDelaySeconds: 10
          failureThreshold: 30
          periodSeconds: 10
        resources:
          requests:
            cpu: "600m"
            memory: "450Mi"
          limits:
            cpu: "1200m"
            memory: "1200Mi"
        ports:
        - containerPort: 3000
