kube/sidekiq-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: decidim-sen-sidekiq-deployment
spec:
  selector:
    matchLabels:
      app: decidim-sen-sidekiq
  template:
    metadata:
      labels:
        app: decidim-sen-sidekiq
    spec:
      containers:
      - name: decidim-sen-sidekiq
        image: rg.fr-par.scw.cloud/decidim-sen/decidim-sen:latest
        resources:
          requests:
            cpu: "256m"
            memory: "600Mi"
          limits:
            cpu: "300m"
            memory: "900Mi"
        command: ["sidekiq", "-C", "config/sidekiq.yml"]
