kube/service.yml
apiVersion: v1
kind: Service
metadata:
  name: decidim-sen-load-balancer
spec:
  selector:
    app: decidim-sen-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
