kube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: decidim-sen-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/issuer: letsencrypt-prod
spec:
  rules:
  - host: k8s-decidim-sen.osp.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: decidim-sen-load-balancer
            port:
              number: 80
  tls:
  - hosts:
    -  k8s-decidim-sen.osp.dev
    secretName: decidim-sen-ingress-secret
